--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -4,12 +4,12 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  padding-top: 78px;
+  padding-top: 76px;
 }
 
 @media (min-width: 768px) {
   .hero {
-    padding-top: 104px;
+    padding-top: 102px;
   }
 }
 
