--- a/src/components/PrivacyPolicy.module.css
+++ b/src/components/PrivacyPolicy.module.css
@@ -1,10 +1,10 @@
 .page {
-  padding-top: 78px;
+  padding-top: 76px;
 }
 
 @media (min-width: 768px) {
   .page {
-    padding-top: 104px;
+    padding-top: 102px;
   }
 }
 
