--- a/src/pages/BlogPostPage.module.css
+++ b/src/pages/BlogPostPage.module.css
@@ -9,12 +9,12 @@
 }
 
 .article {
-  padding-top: 78px;
+  padding-top: 76px;
 }
 
 @media (min-width: 768px) {
   .hero {
-    padding-top: 104px;
+    padding-top: 102px;
   }
 }
 
